mod_9/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-server
  labels: {
    "app":"better-http-server"
  }

spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: better-http-server
