mod_9/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpserver-443
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: ingress-tls.sunbin123.xyz
      http:
        paths:
          - backend:
              service:
                name: http-server 
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ingress-tls.sunbin123.xyz
      secretName: mod8-tls-2
