mod_9/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpserver-80
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: ingress.sunbin123.xyz
      http:
        paths:
          - backend:
              service:
                name: http-server 
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ingress.sunbin123.xyz
      secretName: mod8-tls
